--- a/WhatsAppAnalyzer.cabal
+++ b/WhatsAppAnalyzer.cabal
@@ -19,4 +19,7 @@ executable WhatsAppAnalyzer
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                        ,megaparsec
+                       ,text
+                       ,lens
+                       ,dates
   other-modules:       Parser
