--- a/WhatsAppAnalyzer.cabal
+++ b/WhatsAppAnalyzer.cabal
@@ -21,5 +21,7 @@ executable WhatsAppAnalyzer
                        ,megaparsec
                        ,text
                        ,lens
-                       ,dates
+                       ,time
+                       ,containers
+                       ,multiset
   other-modules:       Parser
