--- a/WhatsAppAnalyzer.cabal
+++ b/WhatsAppAnalyzer.cabal
@@ -24,4 +24,6 @@ executable WhatsAppAnalyzer
                        ,time
                        ,containers
                        ,multiset
+                       ,hmatrix
   other-modules:       Parser
+                       ,Analyzer
